fixed display bugs on firefox

--- a/css/quadnet.css
+++ b/css/quadnet.css
@@ -32,8 +32,7 @@ body {
 }
 
 #quadnet-hud .lives-display img {
-  content:url("../img/live.png");
-  height: 20%;
+  height: 32px;
   margin-left: 5%;
 }
 
